libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/access-field-literal-string.jsonc
//@ run: fail
//@ description: Field access with string literal should error
["::kernel::special_form::access", "data", { "#literal": "field_name" }]
//~^ ERROR expected an integer for field indexing
//~| ERROR cannot find value `data` in this scope
